Updated site branch.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="author" content="Joe Root" />
     <title>Wardrobe</title>
 
-    <link rel="stylesheet" type="text/css" href="/docs/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="/docs/css/ingrid.css">
-    <link rel="stylesheet" type="text/css" href="/docs/css/blueprint.css">
-    <link rel="stylesheet" type="text/css" href="/docs/css/typography.css">
-    <link rel="stylesheet" type="text/css" href="/docs/css/pastie.css">
-    <link rel="stylesheet" type="text/css" href="/docs/css/layout.css">
+    <link rel="stylesheet" type="text/css" href="docs/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="docs/css/ingrid.css">
+    <link rel="stylesheet" type="text/css" href="docs/css/blueprint.css">
+    <link rel="stylesheet" type="text/css" href="docs/css/typography.css">
+    <link rel="stylesheet" type="text/css" href="docs/css/pastie.css">
+    <link rel="stylesheet" type="text/css" href="docs/css/layout.css">
 
     <script type="text/javascript" src="/lib/wardrobe.js"></script>
     
