--- a/try/index.html
+++ b/try/index.html
@@ -6,11 +6,11 @@
     <meta name="author" content="Joe Root" />
     <title>Wardrobe</title>
 
-    <link rel="stylesheet" type="text/css" href="/docs/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="/docs/css/ingrid.css">
-    <link rel="stylesheet" type="text/css" href="/docs/css/blueprint.css">
-    <link rel="stylesheet" type="text/css" href="/docs/css/pastie.css">
-    <link rel="stylesheet" type="text/css" href="/docs/css/editor.css">
+    <link rel="stylesheet" type="text/css" href="../docs/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../docs/css/ingrid.css">
+    <link rel="stylesheet" type="text/css" href="../docs/css/blueprint.css">
+    <link rel="stylesheet" type="text/css" href="../docs/css/pastie.css">
+    <link rel="stylesheet" type="text/css" href="../docs/css/editor.css">
 
     <script type="text/javascript" src="/lib/wardrobe.js"></script>
     
@@ -24,8 +24,8 @@
       </header>-->
 
     <div id="editor">some text</div>
-    <script src="/docs/scripts/ace.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/docs/scripts/theme-github.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../docs/scripts/ace.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../docs/scripts/theme-github.js" type="text/javascript" charset="utf-8"></script>
     <script>
         var editor = ace.edit("editor");
         editor.setTheme("ace/theme/github");
