Fixed links on home page.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header class="field-unit"> 
           <h1>Wardrobe</h1>
           <img src="docs/images/wardrobe-baynes.jpg" />
-          <h3>Wardrobe is a simple object-oriented language that can be run within the browser. Primarily aimed at teaching children and teenagers to program, the language has been built with simplicity in mind. If you're interested why not <a href="/try">give it a try</a> or <a href="/docs">check out the docs</a>.</h3>
+          <h3>Wardrobe is a simple object-oriented language that can be run within the browser. Primarily aimed at teaching children and teenagers to program, the language has been built with simplicity in mind. If you're interested why not <a href="try">give it a try</a> or <a href="docs">check out the docs</a>.</h3>
         </header>
       </div>
     </div>
