--- a/try/index.html
+++ b/try/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/editor.css">
 
-    <script type="text/javascript" src="/lib/wardrobe.js"></script>
+    <script type="text/javascript" src="../lib/wardrobe.js"></script>
     <script type="text/javascript" src="scripts/jquery-1.7.2.min.js"></script>
     
     <script type="text/javascript" src="http://use.typekit.com/htb2rpi.js"></script>
