--- a/try/index.html
+++ b/try/index.html
@@ -60,8 +60,7 @@ end
 
 x = x + 1
 
-return x 
-      </div>
+return x </div>
       <script src="scripts/ace.js" type="text/javascript" charset="utf-8"></script>
       <script src="scripts/theme-github.js" type="text/javascript" charset="utf-8"></script>
       <script src="scripts/mode-ruby.js" type="text/javascript" charset="utf-8"></script>
