Reorganised project folders.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="author" content="Joe Root" />
     <title>Wardrobe</title>
 
-    <link rel="stylesheet" type="text/css" href="docs/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="docs/css/ingrid.css">
-    <link rel="stylesheet" type="text/css" href="docs/css/blueprint.css">
-    <link rel="stylesheet" type="text/css" href="docs/css/typography.css">
-    <link rel="stylesheet" type="text/css" href="docs/css/pastie.css">
-    <link rel="stylesheet" type="text/css" href="docs/css/layout.css">
+    <link rel="stylesheet" type="text/css" href="doc/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="doc/css/ingrid.css">
+    <link rel="stylesheet" type="text/css" href="doc/css/blueprint.css">
+    <link rel="stylesheet" type="text/css" href="doc/css/typography.css">
+    <link rel="stylesheet" type="text/css" href="doc/css/pastie.css">
+    <link rel="stylesheet" type="text/css" href="doc/css/layout.css">
 
     <script type="text/javascript" src="/lib/wardrobe.js"></script>
     
@@ -24,7 +24,7 @@
       <div class="ingrid in-sixths">
         <header class="field-unit"> 
           <h1>Wardrobe</h1>
-          <img src="docs/images/wardrobe-baynes.jpg" />
+          <img src="doc/images/wardrobe-baynes.jpg" />
           <h3>Wardrobe is a simple object-oriented language that can be run within the browser. Primarily aimed at teaching children and teenagers to program, the language has been built with simplicity in mind. If you're interested why not <a href="try">give it a try</a> or <a href="docs">check out the docs</a>.</h3>
         </header>
       </div>
