--- a/try/index.html
+++ b/try/index.html
@@ -32,9 +32,9 @@
       <div class="ingrid in-thirds">
         <div class="unit">
           <select id="files" class="chosen">
-            <option value='examples/simple.wardrobe'>simple.wardrobe</option>
-            <option value='examples/lists.wardrobe'>lists.wardrobe</option>
-            <option value='examples/boolean.wardrobe'>boolean.wardrobe</option>
+            <option value='example/simple.wardrobe'>simple.wardrobe</option>
+            <option value='example/lists.wardrobe'>lists.wardrobe</option>
+            <option value='example/boolean.wardrobe'>boolean.wardrobe</option>
           </select>
           <a href="#" id="run">Run</a>
         </div>
