Implemented new file select widget.

--- a/try/index.html
+++ b/try/index.html
@@ -92,7 +92,7 @@
     <header>
       <div class="ingrid in-thirds">
         <div class="unit">
-          <select id="files" class="chosen">
+          <select id="files">
             <option value='example/simple.wardrobe'>simple.wardrobe</option>
             <option value='example/lists.wardrobe'>lists.wardrobe</option>
             <option value='example/boolean.wardrobe'>boolean.wardrobe</option>
