Slight front-end changes.

--- a/try/index.html
+++ b/try/index.html
@@ -94,6 +94,8 @@
         <div class="unit">
           <select id="files">
             <option value='example/simple.wardrobe'>simple.wardrobe</option>
+            <option value='example/factorial.wardrobe'>factorial.wardrobe</option>
+            <option value='example/fibonacci.wardrobe'>fibonacci.wardrobe</option>
             <option value='example/lists.wardrobe'>lists.wardrobe</option>
             <option value='example/boolean.wardrobe'>boolean.wardrobe</option>
           </select>
