Added icons to UI.

--- a/try/index.html
+++ b/try/index.html
@@ -105,8 +105,8 @@
             <option value='example/lists.wardrobe'>lists.wardrobe</option>
             <option value='example/boolean.wardrobe'>boolean.wardrobe</option>
           </select>
-          <a href="#" id="run" class='icon' title='Run'><img alt='Run' src='images/icons/201-play.png' /></a>
-          <a href="#" id="store" class='icon' title='Stash'><img alt='Stash' src='images/icons/180-stickynote.png' /></a>
+          <a href="#" id="run" class='icon' title='Run'><img alt='Run' src='images/icns/201-play.png' /></a>
+          <a href="#" id="store" class='icon' title='Stash'><img alt='Stash' src='images/icns/180-stickynote.png' /></a>
         </div>
         <div class="unit title">
           <h3>Wardrobe</h3>
