--- a/try/index.html
+++ b/try/index.html
@@ -67,6 +67,7 @@
         editor.setTheme("ace/theme/tomorrow");
         var RubyMode = require("ace/mode/ruby").Mode;
         editor.getSession().setMode(new RubyMode());
+        editor.getSession().setTabSize(2);
         editor.setShowPrintMargin(false);
 
         $.get('../' + $('select#files').val(), function(data){
