--- a/try/index.html
+++ b/try/index.html
@@ -28,6 +28,8 @@
     <script src="scripts/theme-github.js" type="text/javascript" charset="utf-8"></script>
     <script src="scripts/mode-ruby.js" type="text/javascript" charset="utf-8"></script>
     <script>
+      var editor;
+
       (function($) {
         $.fn.blinky = function() {
           var that = this;
@@ -53,17 +55,13 @@
         $('.flash').blinky();
 
         $('#run').click(function(){
-          var context = Wardrobe.run(editor.getValue());
-          var value = context.getReturnObject().toString();
-          $('#console pre em.flash').before('\<em class="result"\>\<\/em\>\n');
-          $('#console  em.result:last').text('=> ' + value);
-          $('#console').scrollTop($('#console').children().height());
-          return false;       
+          run();
+          return false;
         });
 
         $('.icon').tooltip({placement: 'bottom'});
 
-        var editor = ace.edit("editor");
+        editor = ace.edit("editor");
         editor.setTheme("ace/theme/tomorrow");
         var RubyMode = require("ace/mode/ruby").Mode;
         editor.getSession().setMode(new RubyMode());
@@ -76,8 +74,28 @@
           editor.moveCursorTo(0,0);
         });
 
+        editor.commands.addCommand({
+          name: 'runCode',
+          bindKey: {
+            win: 'Shift-Return',
+            mac: 'Shift-Return',
+            sender: 'editor|cli'
+          },
+          exec: function(env, args, request) {
+            run();
+          }
+        });
+
         editor.focus();
       });
+
+      function run() {
+        var context = Wardrobe.run(editor.getValue());
+        var value = context.getReturnObject().toString();
+        $('#console pre em.flash').before('\<em class="result"\>\<\/em\>\n');
+        $('#console  em.result:last').text('=> ' + value);
+        $('#console').scrollTop($('#console').children().height());
+      }
 
       function print(value) {
         value = value.toString().toString();
