Added error example to try page.

--- a/try/index.html
+++ b/try/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" type="text/css" href="css/typography.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/editor.css">
-    <link href="//get.pictos.cc/fonts/2474/1" rel="stylesheet" type="text/css">
 
     <script type="text/javascript" src="../lib/wardrobe.js"></script>
     <script type="text/javascript" src="scripts/jquery.min.js"></script>
@@ -123,6 +122,7 @@
             <option value='example/fibonacci.wardrobe'>fibonacci.wardrobe</option>
             <option value='example/lists.wardrobe'>lists.wardrobe</option>
             <option value='example/boolean.wardrobe'>boolean.wardrobe</option>
+            <option value='example/error.wardrobe'>error.wardrobe</option>
           </select>
           <a href="#" id="run" class='icon' title='Run'><img alt='Run' src='images/icns/201-play.png' /></a>
           <a href="#" id="store" class='icon' title='Stash'><img alt='Stash' src='images/icns/180-stickynote.png' /></a>
