Reorganised error folder structure.

--- a/try/index.html
+++ b/try/index.html
@@ -26,85 +26,7 @@
     <script src="scripts/ace.js" type="text/javascript" charset="utf-8"></script>
     <script src="scripts/theme-github.js" type="text/javascript" charset="utf-8"></script>
     <script src="scripts/mode-ruby.js" type="text/javascript" charset="utf-8"></script>
-    <script>
-      var editor;
-
-      (function($) {
-        $.fn.blinky = function() {
-          var that = this;
-          function go() {
-            $(that).toggle();
-            setTimeout(go, 800); 
-          };
-          go();
-        };
-      })(jQuery);
-
-      $(document).ready(function(){
-        $('select#files').dropkick({
-          change: function() {
-            var file = $(this).val();
-            $.get('../' + file, function(data){
-              editor.setValue(data);
-              editor.clearSelection();
-              editor.moveCursorTo(0,0);
-            });
-          }
-        });
-        $('.flash').blinky();
-
-        $('#run').click(function(){
-          run();
-          return false;
-        });
-
-        $('.icon').tooltip({placement: 'bottom'});
-
-        editor = ace.edit("editor");
-        editor.setTheme("ace/theme/tomorrow");
-        var RubyMode = require("ace/mode/ruby").Mode;
-        editor.getSession().setMode(new RubyMode());
-        editor.getSession().setTabSize(2);
-        editor.setShowPrintMargin(false);
-
-        $.get('../' + $('select#files').val(), function(data){
-          editor.setValue(data);
-          editor.clearSelection();
-          editor.moveCursorTo(0,0);
-        });
-
-        editor.commands.addCommand({
-          name: 'runCode',
-          bindKey: {
-            win: 'Shift-Return',
-            mac: 'Shift-Return',
-            sender: 'editor|cli'
-          },
-          exec: function(env, args, request) {
-            run();
-          }
-        });
-
-        editor.focus();
-      });
-
-      function run() {
-        var context = Wardrobe.run(editor.getValue());
-        var value = context.getReturnObject().toString();
-        $('#console pre em.flash').before('\<em class="result"\>\<\/em\>\n');
-        $('#console  em.result:last').text('=> ' + value);
-        $('#console').scrollTop($('#console').children().height());
-      }
-
-      function print(value) {
-        value = value.toString().toString();
-        $('#console pre em.flash').before("\<em class='print'\>\<\/em\>\n");
-        $('#console  em.print:last').text(value);
-        $('#console').scrollTop($('#console').children().height());
-      }
-
-    </script>
-
+    <script src="scripts/editor.wardrobe.js" type="text/javascript" charset="utf-8"></script>
   </head>
 
   <body>
