Redeigned fronted buttons and ui.

--- a/try/index.html
+++ b/try/index.html
@@ -46,8 +46,8 @@
             <option value='example/boolean.wardrobe'>boolean.wardrobe</option>
             <option value='example/error.wardrobe'>error.wardrobe</option>
           </select>
-          <a href="#" id="run" class='icon' title='Run'><img alt='Run' src='images/icns/201-play.png' /></a>
-          <a href="#" id="store" class='icon' title='Stash'><img alt='Stash' src='images/icns/180-stickynote.png' /></a>
+          <a href="#" id="run" class='icon' title='Run'><img alt='Run' src='images/icns/run.png' /></a>
+          <a href="#" id="store" class='icon' title='Warning'><img alt='Warning' src='images/icns/warning.png' /></a>
         </div>
         <div class="unit title">
           <h3>Wardrobe</h3>
@@ -59,6 +59,7 @@
     </header>
 
     <section>
+      <div id="info_container" class="container"><div id="info"></div></div>
       <div id="editor_container" class="container"><div id="editor"></div></div>
       <div id="console_container" class="container"><div id="console">
           <pre>Welcome to Wadrobe (über-alpha)!
