Better syntax error highlighting.

--- a/try/index.html
+++ b/try/index.html
@@ -24,7 +24,8 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
     <script src="scripts/ace.js" type="text/javascript" charset="utf-8"></script>
-    <script src="scripts/theme-github.js" type="text/javascript" charset="utf-8"></script>
+    <script src="scripts/theme-tomorrow.js" type="text/javascript" charset="utf-8"></script>
+    <script src="scripts/theme-tomorrow-night-eighties.js" type="text/javascript" charset="utf-8"></script>
     <script src="scripts/mode-ruby.js" type="text/javascript" charset="utf-8"></script>
     <script src="scripts/editor.wardrobe.js" type="text/javascript" charset="utf-8"></script>
   </head>
