Warning button now jumps to line.

--- a/try/index.html
+++ b/try/index.html
@@ -47,8 +47,8 @@
             <option value='example/boolean.wardrobe'>boolean.wardrobe</option>
             <option value='example/error.wardrobe'>error.wardrobe</option>
           </select>
-          <a href="#" id="run" class='icon' title='Run'><img alt='Run' src='images/icns/run.png' /></a>
-          <a href="#" id="store" class='icon' title='Warning'><img alt='Warning' src='images/icns/warning.png' /></a>
+          <a href="#" id="run" class='icon' title='Run'><span>&nbsp;</span></a>
+          <a href="#" id="warning" class='icon' title='Warning'><span>&nbsp;</span></a>
         </div>
         <div class="unit title">
           <h3>Wardrobe</h3>
