--- a/try/index.html
+++ b/try/index.html
@@ -43,7 +43,7 @@
             <option value='example/simple.wardrobe'>simple.wardrobe</option>
             <option value='example/factorial.wardrobe'>factorial.wardrobe</option>
             <option value='example/fibonacci.wardrobe'>fibonacci.wardrobe</option>
-            <option value='example/map.wardrobe'>lists.wardrobe</option>
+            <option value='example/map.wardrobe'>map.wardrobe</option>
             <option value='example/lists.wardrobe'>lists.wardrobe</option>
             <option value='example/boolean.wardrobe'>boolean.wardrobe</option>
             <option value='example/error.wardrobe'>error.wardrobe</option>
