Basic for iterator now supported on lists and return statements throughout.

--- a/try/index.html
+++ b/try/index.html
@@ -45,6 +45,7 @@
             <option value='example/fibonacci.wardrobe'>fibonacci.wardrobe</option>
             <option value='example/map.wardrobe'>map.wardrobe</option>
             <option value='example/lists.wardrobe'>lists.wardrobe</option>
+            <option value='example/for.wardrobe'>for.wardrobe</option>
             <option value='example/boolean.wardrobe'>boolean.wardrobe</option>
             <option value='example/error.wardrobe'>error.wardrobe</option>
           </select>
