--- a/try/index.html
+++ b/try/index.html
@@ -26,7 +26,7 @@
     <script src="scripts/ace.js" type="text/javascript" charset="utf-8"></script>
     <script src="scripts/theme-tomorrow.js" type="text/javascript" charset="utf-8"></script>
     <script src="scripts/theme-tomorrow-night-eighties.js" type="text/javascript" charset="utf-8"></script>
-    <script src="scripts/mode-ruby.js" type="text/javascript" charset="utf-8"></script>
+    <script src="scripts/mode-wardrobe.js" type="text/javascript" charset="utf-8"></script>
     <script src="scripts/editor.wardrobe.js" type="text/javascript" charset="utf-8"></script>
   </head>
 
