Updated frontend examples.

--- a/try/index.html
+++ b/try/index.html
@@ -41,12 +41,10 @@
         <div class="unit">
           <select id="files" name='pretty' class="files">
             <option value='example/simple.wardrobe'>simple.wardrobe</option>
+            <option value='example/closure.wardrobe'>closure.wardrobe</option>
             <option value='example/factorial.wardrobe'>factorial.wardrobe</option>
             <option value='example/fibonacci.wardrobe'>fibonacci.wardrobe</option>
             <option value='example/map.wardrobe'>map.wardrobe</option>
-            <option value='example/lists.wardrobe'>lists.wardrobe</option>
-            <option value='example/for.wardrobe'>for.wardrobe</option>
-            <option value='example/boolean.wardrobe'>boolean.wardrobe</option>
             <option value='example/error.wardrobe'>error.wardrobe</option>
           </select>
           <a href="#" id="run" class='icon' title='Run'><span>&nbsp;</span></a>
